--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
+    <script src="/js/jquery.js"></script>
   </head>
   <body>
     <div class="main-container">
@@ -73,5 +74,6 @@
         {{/logged_in}}
       </div>
     </div>
+    <script src="/js/script.js"></script>
   </body>
 </html>
