start adding script - game data - and pseudocode in comment

--- a/views/index.html
+++ b/views/index.html
@@ -23,18 +23,25 @@
             <!-- email is in the auth db..  need catname from the catusers db -->
             <h4>{{catname}}!</h4>
             <!-- in css, header here should be stuck to top.. only display and choices should be 'moved' as in a 1-page site..    -->
-            <p>YOU ARE IN THE BASEMENT</p>
-            <div class="display">
-            basement
-            <h1>[]</h1>
-            </div>
+            <div id="game-unit">
+
+              <!--
+              <div class="message">
+              <p>YOU ARE IN THE BASEMENT</p>
+              </div>
+              <div class="image">
+              <h1>[]</h1>
+              </div>
+              <div class="options">
+              options
+              <h2>{}{}{}</h2>
+              </div>
+              <div class="message"><h3>"playing"</h3></div>
+              -->
+
+            </div> <!-- game-unit -->
             <!-- user choice should be logged in db as data and a story string of text should be built in the front end -->
-            <div class="options">
-            options
-            <h2>{}{}{}</h2>
-            </div>
             <!-- upon win/lose state a message and return to root should be displayed -->
-            <div class="message"><h3>"playing"</h3></div>
           </div>
           <a href="/logout">Logout!</a>
         </div>
