--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -9,3 +9,13 @@ h1 {
 
 .center-block { float: none }
 
+#game-unit {
+  width: 75%;
+  height: 75%;
+}
+
+#game-unit img {
+  width: 100%;
+  height: 100%;
+}
+
