--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="main-container">
       <div class="border-container">
-        <h1>Super Secure Signup Page</h1>
+        <h1>Do you think like a smart cat?</h1>
         <div class="col-lg-6 center-block">
           <div class="well bs-component">
             <form class="form-horizontal" action="/signup" method="post">
@@ -27,7 +27,10 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="inputCatName" class="col-lg-2 control-label">Your CatName</label>
+                  <label for="inputCatName" class="col-lg-2 control-label">Your Cat-Name
+                  <a href="https://allpoetry.com/The-Naming-Of-Cats">T.S. Elliot</a>
+
+                  </label>
                   <div class="col-lg-10">
                     <input name="catname" type="text" class="form-control" id="inputCatName" placeholder="CatName">
                   </div>
