--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -1,50 +1,28 @@
 <!doctype html>
 <html>
   <head>
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="main-container">
-      <div class="border-container">
         <h1>Do you think like a smart cat?</h1>
-        <div class="col-lg-6 center-block">
-          <div class="well bs-component">
-            <form class="form-horizontal" action="/signup" method="post">
-              <fieldset>
-                <legend>Sign Up</legend>
-                <div class="form-group">
-                  <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-                  <div class="col-lg-10">
-                    <input name="email" type="text" class="form-control" id="inputEmail" placeholder="Email">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-                  <div class="col-lg-10">
-                    <input name="password" type="password" class="form-control" id="inputPassword" placeholder="Password">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputCatName" class="col-lg-2 control-label">Your Cat-Name
-                  <a href="https://allpoetry.com/The-Naming-Of-Cats">T.S. Elliot</a>
 
-                  </label>
-                  <div class="col-lg-10">
-                    <input name="catname" type="text" class="form-control" id="inputCatName" placeholder="CatName">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-lg-10 col-lg-offset-2">
-                    <button type="submit" class="btn btn-primary">Join!</button>
-                  </div>
-                </div>
-              </fieldset>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+        <div class="form-area">
+          <form class="form" action="/signup" method="post">
+            <legend>Sign Up</legend>
+              <label for="inputEmail" class="emailInput">Email</label>
+                <input name="email" type="text" class="form-control" id="inputEmail" placeholder="Email" />
+              <label for="inputPassword" class="passInput">Password</label>
+                <input name="password" type="password" class="form-control" id="inputPassword" placeholder="Password">
+              <label for="inputCatName" class="catNameInput">Your Cat-Name
+                <a href="https://allpoetry.com/The-Naming-Of-Cats">T.S. Elliot</a>
+              </label>
+                <input name="catname" type="text" class="form-control" id="inputCatName" placeholder="CatName">
+                <button type="submit" class="btn btn-primary">Join!</button>
+          </form>
+        </div> <!-- form-area -->
+
+    </div> <!-- main container -->
   </body>
 </html>
