--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,20 +1,77 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/*  end reset.css */
+/*  end reset.css */
+/*  end reset.css */
+/*  end reset.css */
+/*  end reset.css */
+/*  end reset.css */
+/*  end reset.css */
+
 body {
   /* font-family: 'Dawning of a New Day', cursive; */
   font-family: 'La Belle Aurore', cursive;
-  font-size: 1.5em;
+  font-size: 3em;
   background-color: #FFE;
 }
 
 h1 {
-  font-size: 2em;
+
 }
 
 .main-container {
   display: grid;
-  grid-template-columns: 1fr 75% 1fr;
-  grid-template-rows: 25% 75%;
-  width: 100%;
-  height: 100vh;
+  grid-template-columns: 10vw 80vw 10vw;
+  grid-template-rows: 25vh 75vh 25vh 25vh;
+  width: 300vw;
+  height: 300vh;
   margin: 0 auto;
 }
 
@@ -24,7 +81,7 @@ header {
   grid-column-start: 2;
   align-self: center;
   text-align: center;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.6em;
 }
 
 #form-area {
@@ -34,13 +91,34 @@ header {
 }
 
 #game-unit {
-  width: 75%;
-  height: 75%;
+  grid-row-start: 2;
+  grid-column-start: 2;
+  justify-self: center;
 }
 
-#game-unit img {
+.border-div {
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: 0;
+  padding-top: 65%;
+  border-radius: 10%;
+  margin: 5%;
+}
+
+.border-div .room-image {
+  position: absolute;
+  background-position: 3% 3%;
+  background-size: 110%;
+  overflow: auto;
+  width: 90%;
+  height: 0;
+  padding-top: 59%;
+  border: 12px solid #000;
+  border-radius: 9%;
+  outline: 3% solid #000;
+  outline-offset: -4%;
+  top: -3%;
+  left: -3%;
 }
 
 /* make button look the same as the link */
@@ -64,8 +142,20 @@ span {
   justify-content: center;
 }
 
+input {
+    text-decoration:underline;
+    display:inline-block;
+}
+
 #poem {
   grid-row-start: 3;
   grid-column-start: 2;
+}
+
+logout {
+  grid-row-start: 4;
+  grid-column-start: 2;
+  align-content: start;
+  text-align: center;
 }
 
