--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -63,31 +63,34 @@ body {
 }
 
 h1 {
-
+  line-height: 1.4em;
 }
 
 .main-container {
   display: grid;
-  grid-template-columns: 10vw 80vw 10vw;
-  grid-template-rows: 25vh 75vh 25vh 25vh;
+  grid-template-columns: 1vw 80vw 10vw;
+  grid-template-rows: 20vh 70vh 5vh 5vh;
   width: 300vw;
   height: 300vh;
-  margin: 0 auto;
+  margin: 2%;
 }
 
 
 header {
   grid-row-start: 1;
   grid-column-start: 2;
-  align-self: center;
+  align-self: start;
   text-align: center;
-  letter-spacing: 0.6em;
+  letter-spacing: 0.4em;
+  margin: 10%;
 }
 
 #form-area {
   grid-row-start: 2;
   grid-column-start: 2;
-  align-self: start;
+  align-self: center;
+  justify-self: center;
+  /*line-height: 1.4em;*/
 }
 
 #game-unit {
@@ -98,9 +101,9 @@ header {
 
 .border-div {
   position: relative;
-  width: 100%;
+  width: 90%;
   height: 0;
-  padding-top: 65%;
+  padding-top: 69%;
   border-radius: 10%;
   margin: 5%;
 }
@@ -108,17 +111,15 @@ header {
 .border-div .room-image {
   position: absolute;
   background-position: 3% 3%;
-  background-size: 110%;
+  background-size: cover;
   overflow: auto;
-  width: 90%;
+  width: 100%;
   height: 0;
-  padding-top: 59%;
+  padding-top: 68%;
   border: 12px solid #000;
   border-radius: 9%;
-  outline: 3% solid #000;
-  outline-offset: -4%;
-  top: -3%;
-  left: -3%;
+  top: -3px;
+  left: 0;
 }
 
 /* make button look the same as the link */
@@ -153,9 +154,13 @@ input {
 }
 
 logout {
-  grid-row-start: 4;
+  grid-row-start: 5;
   grid-column-start: 2;
   align-content: start;
   text-align: center;
+}
+
+.form-input {
+
 }
 
