--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="main-container">
       <header>
-        <h1>How do You think as a cat?</h1>
+        <h1>What is your own Cat-Name?</h1>
       </header>
       <div id="form-area">
         <form class="form" action="/signup" method="post">
