--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -63,13 +63,15 @@ body {
 }
 
 h1 {
-  line-height: 1.4em;
+  font-size: 0.6em;
+  line-height: 2em;
+  letter-spacing: 1em;
 }
 
 .main-container {
   display: grid;
   grid-template-columns: 1vw 80vw 10vw;
-  grid-template-rows: 20vh 70vh 5vh 5vh;
+  grid-template-rows: 20vh 70vh 15vh 5vh;
   width: 300vw;
   height: 300vh;
   margin: 2%;
@@ -90,7 +92,8 @@ header {
   grid-column-start: 2;
   align-self: center;
   justify-self: center;
-  /*line-height: 1.4em;*/
+  font-size: 0.7em;
+  line-height: 1.4em;
 }
 
 #game-unit {
@@ -103,8 +106,8 @@ header {
   position: relative;
   width: 90%;
   height: 0;
-  padding-top: 69%;
-  border-radius: 10%;
+  border: 12px solid #000;
+  padding-top: 58%;
   margin: 5%;
 }
 
@@ -115,9 +118,7 @@ header {
   overflow: auto;
   width: 100%;
   height: 0;
-  padding-top: 68%;
-  border: 12px solid #000;
-  border-radius: 9%;
+  padding-top: 65%;
   top: -3px;
   left: 0;
 }
