--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
               </div> <!-- game-unit -->
               <!-- user choice should be logged in db as data and a story string of text should be built in the front end -->
               <!-- upon win/lose state a message and return to root should be displayed -->
-              <logout><a href="/logout">Logout</a></logout>
+              <form action="/" method="put"><logout><button type="submit">Logout</button></logout></form>
           </div> <!-- main container -->
         {{/logged_in}}
 
