--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -18,7 +18,7 @@
             <label for="inputCatName" class="catNameInput">Your Cat-Name</label>
               <input name="catname" type="text" class="form-input" id="inputCatName" placeholder="CatName" />
               <button type="submit" class="form-button"><span>Start</span></button><br />
-              <a href="#poem"><span>T.S. Elliot<span></a>
+              <a href="#poem"><span>T.S. Elliot "The Naming of Cats"<span></a>
         </form>
       </div> <!-- form-area -->
 
