--- a/views/index.html
+++ b/views/index.html
@@ -20,12 +20,12 @@
               </div> <!-- game-unit -->
               <!-- user choice should be logged in db as data and a story string of text should be built in the front end -->
               <div id="result">
-                <div id="email" name="email">{{email}}</div>
-                <form action="/results" method="put">
-                <input type="hidden" name="catdata" value="" />
+                <form method="POST" action="/results">
+                <input id="cat-data" name="catdata" value="" />
                 <!-- in script.js, always update value of catdata every turn -->
                   <button type="submit">Results</button>
                 </form>
+                <a href="/logout">logout</a>
               </div> <!-- result -->
 
           </div> <!-- main container -->
