--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -15,7 +15,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, button {
   margin: 0;
   padding: 0;
   border: 0;
@@ -51,6 +51,9 @@ table {
 /*  end reset.css */
 /*  end reset.css */
 /*  end reset.css */
+/*html,body {
+  height:100%;
+}*/
 /*  end reset.css */
 /*  end reset.css */
 /*  end reset.css */
@@ -59,7 +62,7 @@ table {
 body {
   /* font-family: 'Dawning of a New Day', cursive; */
   font-family: 'La Belle Aurore', cursive;
-  font-size: 3em;
+  font-size: 2em;
   background-color: #FFE;
 }
 
@@ -72,13 +75,12 @@ h1 {
 .main-container {
   overflow: hidden;
   display: grid;
-  grid-template-columns: 10% 80% 90%;
-  grid-template-rows: 15% 5% 80% 95% 110%;
+  grid-template-columns: 10% 80% 10% 100%;
+  grid-template-rows: 10% 5% 70% 100%;
   width: 70%;
   height: 70%;
-  padding: 5%;
+  padding: 0 5% 5% 5%;
 }
-
 
 header {
   grid-row-start: 1;
@@ -87,7 +89,7 @@ header {
   text-align: center;
   letter-spacing: 0.4em;
   text-decoration-style: bold;
-  margin: 10%;
+  margin: 5% 5% 2% 5%;
 }
 
 #form-area {
@@ -112,43 +114,80 @@ form label {
   grid-row-start: 3;
   grid-column-start: 2;
   justify-self: center;
+  width: 100%;
+}
+
+#results-unit {
+  grid-row-start: 3;
+  grid-column-start: 2;
+  justify-self: center;
   width: 70%;
+  margin-top: 5%;
 }
 
 #email {
   display: none;
 }
 
-.border-div {
-  position: relative;
-  height: 0;
-  border: 12px solid #000;
-  padding-top: 55%;
-  margin: 5%;
+#cat-data {
+  display: none;
 }
 
-.border-div .room-image {
-  position: absolute;
-  background-position: 3% 3%;
-  background-size: cover;
-  overflow: auto;
-  width: 100%;
-  height: 0;
+.message{
+  margin: 0 0 4% 0;
+}
+
+/*.border-div {
+  position: relative;
+  border: 12px solid #000;
+  width: 80%;
+  height: 0 auto;
   padding-top: 65%;
-  top: -3px;
-  left: 0;
+}*/
+
+.room-image {
+  display: flex;
+  position: relative;
+  outline: 12px solid #000;
+  width: 80%;
+  height: 0 auto;
+  padding-top: 53%;
+  background-size: cover;
+  overflow: auto
+  margin-bottom: 4%;
 }
 
 /* make button look the same as the link */
 
-.opt {
+.clickable {
+  border: 2px solid pink;
+  background: transparent;
+}
+
+/*from title to basement*/
+/*from basement to boiler*/
+/*from basement to hall*/
+
+
+.opts {
+  font-size: 0.8em;
   margin: 2% 0 2% 0;
 }
 
+.opt {
+  margin: 1% 0 2% 0;
+  vertical-align: 90%;
+}
+
+.status {
+  padding: 2% 0 2% 0;
+  font-size: 0.7em;
+}
+
 button, a {
-  background:none;
-  border:none;
-  padding: 0;
+  background: none;
+  border: none;
+  /*padding: 0;*/
   font: inherit;
   color: #F3F;
   text-decoration: underline;
