--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -75,7 +75,7 @@ h1 {
 .main-container {
   overflow: hidden;
   display: grid;
-  grid-template-columns: 10% 80% 10% 100%;
+  grid-template-columns: 10% 80% 10%;
   grid-template-rows: 10% 5% 70% 100%;
   width: 70%;
   height: 70%;
