--- a/public/CSS/stylenogrid.css
+++ b/public/CSS/stylenogrid.css
@@ -73,18 +73,25 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 5% 10% 5% 10%;
+  zoom: 0.5;
+  -moz-transform: scale(0.5);
+  margin: 2% 25% 0% 25%;
 }
 
 header {
   text-decoration-style: bold;
-  margin: 5% 5% 2% 5%;
+  margin: 0% 5% 2% 5%;
 }
 
 h1 {
   font-size: 0.6em;
   line-height: 3em;
   letter-spacing: 1em;
+}
+
+h4 {
+  font-size: 1.5em;
+  line-height: 2em;
 }
 
 .message{
@@ -115,6 +122,7 @@ form label {
 .room-image {
   position: relative;
   background-size: cover;
+  border: 8px solid black;
 }
 
 .room-image img{
@@ -154,10 +162,18 @@ input {
   /*display:inline-block; */
 }
 
-.opt, button, a {
+button, a {
   background: none;
   border: none;
   color: #F3F;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.opt {
+  background: none;
+  border: none;
+  color: #70F;
   text-decoration: underline;
   cursor: pointer;
 }
