--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,65 +1,7 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/*  end reset.css */
-/*  end reset.css */
-/*  end reset.css */
-/*  end reset.css */
-/*  end reset.css */
-/*  end reset.css */
-/*  end reset.css */
-
-
 body {
   /* font-family: 'Dawning of a New Day', cursive; */
   font-family: 'La Belle Aurore', cursive;
-  font-size: 3em;
+  font-size: 2em;
   background-color: #FFE;
 }
 
@@ -71,30 +13,26 @@ h1 {
 
 .main-container {
   overflow: hidden;
-  display: grid;
-  grid-template-columns: 10% 80% 90%;
-  grid-template-rows: 15% 5% 80% 95% 110%;
+  display: block;
+  text-align: center;
   width: 70%;
   height: 70%;
-  padding: 5%;
+  padding: 0 5% 5% 5%;
 }
 
+input[type=text], input[type=password] {
+  text-align: center;
+  margin: 0;
+}
 
 header {
-  grid-row-start: 1;
-  grid-column-start: 2;
-  align-self: start;
   text-align: center;
   letter-spacing: 0.4em;
   text-decoration-style: bold;
-  margin: 10%;
+  margin: 5% 5% 2% 5%;
 }
 
 #form-area {
-  grid-row-start: 3;
-  grid-column-start: 2;
-  align-self: center;
-  justify-self: center;
   font-size: 0.7em;
   line-height: 1.4em;
 }
@@ -109,46 +47,79 @@ form label {
 }
 
 #display-unit {
-  grid-row-start: 3;
-  grid-column-start: 2;
-  justify-self: center;
-  width: 70%;
+  width: 100%;
+}
+
+#results-unit {
+  width: 100%;
+  margin-top: 5%;
 }
 
 #email {
   display: none;
 }
 
-.border-div {
-  position: relative;
-  height: 0;
-  border: 12px solid #000;
-  padding-top: 55%;
-  margin: 5%;
+#cat-data {
+  display: none;
 }
 
-.border-div .room-image {
-  position: absolute;
-  background-position: 3% 3%;
-  background-size: cover;
-  overflow: auto;
-  width: 100%;
-  height: 0;
+.message{
+  margin: 0 0 4% 0;
+}
+
+/*.border-div {
+  position: relative;
+  border: 12px solid #000;
+  width: 80%;
+  height: 0 auto;
   padding-top: 65%;
-  top: -3px;
-  left: 0;
+}*/
+
+.room-image {
+  display: flex;
+  position: relative;
+  outline: 12px solid #000;
+  width: 80%;
+  height: 0 auto;
+  padding-top: 53%;
+  background-size: cover;
+  overflow: auto
+  margin-bottom: 4%;
 }
 
 /* make button look the same as the link */
 
-.opt {
+.clickable {
+  align-items: stretch;
+  position: absolute;
+  border: 2px solid pink;
+  background-color: rgba(155,0,0,0.5);
+}
+
+/*from title to basement*/
+/*from basement to boiler*/
+/*from basement to hall*/
+
+
+.opts {
+  font-size: 0.8em;
   margin: 2% 0 2% 0;
 }
 
+.opt {
+  margin: 1% 0 2% 0;
+  vertical-align: 90%;
+}
+
+.status {
+  padding: 2% 0 2% 0;
+  font-size: 0.7em;
+}
+
 button, a {
-  background:none;
-  border:none;
-  padding: 0;
+  background: none;
+  border: none;
+  /*padding: 0;*/
   font: inherit;
   color: #F3F;
   text-decoration: underline;
