--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="/css/style2.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Dawning+of+a+New+Day|La+Belle+Aurore" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Raleway|La+Belle+Aurore" rel="stylesheet">
     <title>Thinking Cat</title>
   </head>
   <body>
@@ -45,7 +45,7 @@
         {{^logged_in}}
           <div class="main-container">
             <header>
-              <h1>Log-in to play "Thinking Cat."</h1><br />
+              <h4>Log-in to play "Thinking Cat."</h4><br />
             </header>
             <div id="form-area">
               <form class="form" action="/login" method="post">
@@ -55,7 +55,7 @@
                   <input name="password" type="password" class="form-input" id="inputPassword" placeholder="Password">
                 <button type="submit" class="form-button"><span>Login</span></button>
               </form>
-              <p>Not a member?<a href="/signup"><span>Sign Up</span></a></p>
+              <p class="block">Not a member?<a href="/signup"><span>Sign Up</span></a></p>
             </div> <!-- form-area -->
 
           </div> <!-- main container -->
