add express validator and gitignore

--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="main-container">
       <header>
-        <h4>Give yourself a Cat-Name!</h4>
+        <h1>Give yourself a Cat-Name!</h1>
       </header>
       <div id="form-area">
         <form class="form" action="/signup" method="post">
@@ -16,8 +16,8 @@
             <label for="inputPassword" class="passInput">Password</label>
               <input name="password" type="password" class="form-input" id="inputPassword" placeholder="Password" />
             <label for="inputCatName" class="catNameInput">Your Cat-Name</label>
-              <input name="catname" type="text" class="form-input" id="inputCatName" placeholder="CatName" />
-              <button type="submit" class="form-button"><span>Start</span></button><br />
+              <input name="catname" type="text" class="form-input" id="inputCatName" />
+              <button type="submit" class="form-button"><span>Go to Login</span></button><br />
         </form>
       </div> <!-- form-area -->
 
