--- a/public/CSS/style2.css
+++ b/public/CSS/style2.css
@@ -87,6 +87,11 @@ header {
   margin: 2% 5% 2% 5%;
 }
 
+h1 {
+  font-size: 1.2em;
+  line-height: 3em;
+}
+
 h4 {
   font-size: 1em;
   line-height: 1.5em;
@@ -194,11 +199,6 @@ button, a {
   line-height: 1.5em;
   font-family: 'Raleway', sans-serif;
   font-style: italic;
-}
-
-#poem h1 {
-  font-size: 1.2em;
-  line-height: 3em;
 }
 
 
