--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
         {{^logged_in}}
           <div class="main-container">
             <header>
-              <h4>Log-in to play "Thinking Cat."</h4><br />
+              <h1>Log-in to play "Thinking Cat."</h1><br />
             </header>
             <div id="form-area">
               <form class="form" action="/login" method="post">
@@ -55,7 +55,7 @@
                   <input name="password" type="password" class="form-input" id="inputPassword" placeholder="Password">
                 <button type="submit" class="form-button"><span>Login</span></button>
               </form>
-              <p class="block">Not a member?<a href="/signup"><span>Sign Up</span></a></p>
+              <p class="block">No Login?: <a href="/signup"><span>Sign Up</span></a></p>
             </div> <!-- form-area -->
 
           </div> <!-- main container -->
