where to inject d3?

--- a/views/results/index.html
+++ b/views/results/index.html
@@ -2,7 +2,7 @@
 
 <h2>{{catdata}}</h2>
 <div>
-  {{#results}}
+  {{#results.all_cat_array}}
   <p>{{.}}</p>
-  {{/results}}
+  {{/results.all_cat_array}}
 </div>
