--- a/views/results/index.html
+++ b/views/results/index.html
@@ -1,8 +1,25 @@
-<h1>Results Page</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title></title>
+  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Raleway|La+Belle+Aurore" rel="stylesheet">
+  <link href="/css/style2.css" rel="stylesheet" type="text/css">
+  <!-- <link href="/css/results.css" rel="stylesheet" type="text/css"> -->
+</head>
+<body>
+  <h1>Results Page</h1>
 
-<h2>{{catdata}}</h2>
-<div>
-  {{#results.all_cat_array}}
-  <p>{{.}}</p>
-  {{/results.all_cat_array}}
-</div>
+  <!-- works -->
+  <form type="hidden" ><input id="cat-data" name="catdata" value={{catdata}} /></form>
+
+  <div class="header">Results for: {{catname}}</div>
+  <div class="charts"></div>
+
+  <script src="/js/d3.js"></script>
+  <script src="/js/jquery.js"></script>
+  <script src="/js/results.js"></script>
+</body>
+</html>
+
