show colorful chart

--- a/views/results/index.html
+++ b/views/results/index.html
@@ -15,7 +15,7 @@
   <form type="hidden" ><input id="cat-data" name="catdata" value={{catdata}} /></form>
 
   <div class="header">Results for: {{catname}}</div>
-  <div id="charts"></div>
+  <div id="chart-container"></div>
 
   <script src="/js/d3.js"></script>
   <script src="/js/jquery.js"></script>
