--- a/public/CSS/style2.css
+++ b/public/CSS/style2.css
@@ -154,9 +154,9 @@ button {
   color: #F3F;
   text-decoration: underline;
   justify-content: left;
-  opacity: 0;
+/*  opacity: 0;
   transition-property: opacity;
-  transition-duration: 2s;
+  transition-duration: 2s;*/
 }
 
 /* make button look the same as the link */
@@ -184,8 +184,6 @@ button, a {
   justify-content: left;
 }*/
 
-#last-link {
-}
 
 #email {
   display: none;
@@ -204,5 +202,20 @@ button, a {
   font-style: italic;
 }
 
+#chart-container {
+  width: 80vw;
+  height: 80vh;
+/*  border: 4px solid black;*/
+  margin: 0 auto;
+  display: grid;
+}
+
+.chart {
+  width: 90%;
+  height: 20%;
+/*  border: 2px solid black;*/
+  margin: 0 auto;
+  margin-top: 3%;
+}
 
 
