--- a/public/CSS/style2.css
+++ b/public/CSS/style2.css
@@ -202,20 +202,48 @@ button, a {
   font-style: italic;
 }
 
-#chart-container {
-  width: 80vw;
-  height: 80vh;
-/*  border: 4px solid black;*/
+/*in results page*/
+.header {
+  text-align: center;
+  margin: 3%;
+}
+
+#charts {
+  width: 90vh;
+  height: 100%;
   margin: 0 auto;
-  display: grid;
+  border: 3px solid black;
+}
+
+.chart-container {
+  width: 90%;
+  height: 30%;
+  border: 1px solid black;
+  margin: 0 auto;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding: 2%;
+}
+
+.color-block {
+  display: inline-block;
+  height: 1em;
+  width: 2em;
 }
 
 .chart {
   width: 90%;
   height: 20%;
-/*  border: 2px solid black;*/
+  /*border: 2px solid black;*/
   margin: 0 auto;
-  margin-top: 3%;
+  margin-top: 1%;
+}
+
+h5 {
+  font-size: 0.6em;
+  line-height: 1em;
+  font-family: 'Raleway', sans-serif;
+  font-style: italic;
 }
 
 
