testing heroku deploy

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Raleway|La+Belle+Aurore" rel="stylesheet">
     <link href="/css/style2.css" rel="stylesheet" type="text/css">
-    <title>Thinking Cat</title>
+    <title>Thinking Cat ? !</title>
   </head>
   <body>
 
