creative destruction this branch

--- a/views/signin/index.html
+++ b/views/signin/index.html
@@ -11,13 +11,9 @@
       </header>
       <div id="form-area">
         <form class="form" action="/signup" method="post">
-            <label for="inputEmail" class="emailInput">Email</label>
-              <input name="email" type="text" class="form-input" id="inputEmail" placeholder="Email" />
-            <label for="inputPassword" class="passInput">Password</label>
-              <input name="password" type="password" class="form-input" id="inputPassword" placeholder="Password" />
             <label for="inputCatName" class="catNameInput">Your Cat-Name</label>
               <input name="catname" type="text" class="form-input" id="inputCatName" />
-              <button type="submit" class="form-button"><span>Go to Login</span></button><br />
+              <button type="submit" class="form-button"><span>Play</span></button><br />
         </form>
         <div class="valid-errors">
           {{#errors}}
