get to index much faster learning more express and libs

--- a/views/register/index.html
+++ b/views/register/index.html
@@ -7,10 +7,10 @@
   <body>
     <div class="main-container">
       <header>
-        <h1>Give yourself a Cat-Name!</h1>
+        <h1>What is your Cat-Name?</h1>
       </header>
       <div id="form-area">
-        <form class="form" action="/signup" method="post">
+        <form class="form" action="register" method="post">
             <label for="inputCatName" class="catNameInput">Your Cat-Name</label>
               <input name="catname" type="text" class="form-input" id="inputCatName" />
               <button type="submit" class="form-button"><span>Play</span></button><br />
