rename things and add html and css stuff

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -236,4 +236,20 @@ h5 {
   font-style: italic;
 }
 
+h6 {
+  font-size: 0.5em;
+  line-height: 0.8em;
+  font-family: 'Raleway', sans-serif;
+}
+
+.leftward {
+  display: inline-block;
+  
+}
+
+.rightward {
+  display: inline-block;
+
+}
+
 
