--- a/views/results/index.html
+++ b/views/results/index.html
@@ -19,6 +19,8 @@
         <div class="color-block color-block1"></div></h5>
       <h5>compare to all cats:</h5>
       <div class="chart chart1"></div>
+      <h6 class ="leftward">low playfulness</h6>
+      <h6 class ="rightward">high playfulness</h6>
     </div>
     <div class="chart-container">
       <header><h4>Amount of Hunting</h4></header>
@@ -26,6 +28,8 @@
         <div class="color-block color-block2"></div></h5>
       <h5>compare to all cats:</h5>
       <div class="chart chart2"></div>
+      <h6 class ="leftward">low aggression</h6>
+      <h6 class ="rightward">high aggression</h6>
     </div>
     <div class="chart-container">
       <header><h4>Win or Lose</h4></header>
@@ -33,6 +37,8 @@
         <div class="color-block color-block3"></div></h5>
       <h5>compare to all cats:</h5>
       <div class="chart chart3"></div>
+      <h6 class ="leftward">low curiosity</h6>
+      <h6 class ="rightward">high curiosity</h6>
   </div>
 
   <script src="/js/d3.js"></script>
