some data still not 100 or percentage

--- a/views/results/index.html
+++ b/views/results/index.html
@@ -37,8 +37,8 @@
         <div class="color-block color-block3"></div></h5>
       <h5>compare to all cats:</h5>
       <div class="chart chart3"></div>
-      <h6 class ="leftward">low curiosity</h6>
-      <h6 class ="rightward">high curiosity</h6>
+      <h6 class ="leftward">high curiosity</h6>
+      <h6 class ="rightward">low curiosity</h6>
   </div>
 
   <script src="/js/d3.js"></script>
